fixed locomotive bug on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,3 +51,15 @@ body{
   right:0;
   bottom:0;
 }
+
+.blur-comp-after::after{
+  content:"";
+  position:absolute;
+  z-index: 4;
+  -webkit-backdrop-filter: blur(80px);
+  backdrop-filter: blur(80px);
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+}
